@@ -1,0 +1,20 @@
+[live]
+dbhost=prod_host
+dbport=9999
+dbuser=prod_user
+dbname=npgp
+lims_url=https://lims.sanger.ac.uk
+
+[dev]
+dbhost=dev_host
+dbport=9999
+dbuser=dev_user
+dbname=npgt
+lims_url=https://lims-dev.sanger.ac.uk
+
+[test]
+dbhost=test_host
+dbport=9999
+dbuser=test_user
+dbname=npgt
+
